# remote-cluster-controller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-23-rcc.md
docs/superpowers/specs/: 2026-04-23-rcc-design.md  2026-06-28-rcc-issues-2-3.md
src/rcc/: _paramiko_fallback.py  _rsync.py  bg.py  cli.py  config.py  context.py  errors.py  ignore.py  slurm.py  ssh.py  sync.py
src/rcc/commands/: __init__.py  bg.py  close.py  config_cmd.py  init.py  job.py  pull.py  push.py  run.py  shell.py  status.py  tunnel.py
tests/: __init__.py  conftest.py  test_bg.py  test_cli.py  test_config.py  test_deferred_features.py  test_errors.py  test_ignore.py  test_new_commands.py  test_slurm.py  test_slurm_json.py  test_ssh_args.py  test_ssh_exec.py  test_sync.py  test_sync_rsync.py
