[project]
name = "remote-cluster-controller"
version = "0.3.1"
description = "Remote cluster controller: push, pull, run, shell over SSH + rsync"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xyao" }]
dependencies = [
    "typer>=0.12",
    "paramiko>=3.4",
]

[project.scripts]
rcc = "rcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcc"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
markers = ["integration: requires live ssh localhost; opt-in"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
